--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,6 +8,7 @@
 .react-tabs__tab-list .todo-item .item-text {
     display: inline-block;
     width: 110px;
+    white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
 }
